# investments

./: .env  .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs  bump  bump-subpackages  check  config-example.yaml  configure-devel-database  full-check  install.dockerfile  publish  regression-test  regression-test-tax-statement  rt.rt  upgrade  upgrade-subpackages
.github/: check-binary  configure-build-target
.github/workflows/: build.yml  release.yml  test.yml
docs/: brokers.md  config-example.yaml  install.md  quotes.md  rebalancing.md  tax-statement.md  taxes.md
examples/: backtest.rs  tax_statement_parser.rs  tinkoff_api_generator.rs
migrations/2018-10-05-155816_create_currency_rates/: down.sql  up.sql
migrations/2018-11-01-185615_create_quotes/: down.sql  up.sql
migrations/2018-11-13-154942_create_assets/: down.sql  up.sql
migrations/2021-05-02-173453_create_telemetry/: down.sql  up.sql
migrations/2021-05-03-080352_create_settings/: down.sql  up.sql
regression_tests/: generate  investments  rt.rt  test  test-tax-statement  update
src/: brokers.rs  cash_flow.rs  cli.rs  commissions.rs  config.rs  core.rs  currency.rs  deposits.rs  exchanges.rs  forex.rs  formatting.rs  http.rs  init.rs  instruments.rs  lib.rs  localities.rs  main.rs  metrics.rs  proto.rs  rate_limiter.rs  regulations.rs  taxes.rs  telemetry.rs  time.rs  trades.rs  types.rs  util.rs  xls.rs
src/analyse/: deposit_emulator.rs  deposit_performance.rs  mod.rs  performance.rs  profit.rs  sell_simulation.rs
src/analysis/: backtesting.rs  config.rs  deposit_emulator.rs  deposit_performance.rs  inflation.rs  instrument_view.rs  mod.rs  portfolio_analysis.rs  portfolio_performance.rs  portfolio_performance_types.rs  portfolio_statistics.rs  sell_simulation.rs
src/analysis/backtesting/: benchmark.rs  config.rs  deposit.rs  mod.rs  stock.rs
src/analysis/deposit/: mod.rs  performance.rs
src/analysis/performance/: analyser.rs  config.rs  instrument_view.rs  mod.rs  statistics.rs  types.rs
src/broker_statement/: cash_flows.rs  corporate_actions.rs  dividends.rs  fees.rs  grants.rs  ib.rs  interest.rs  merging.rs  mod.rs  partial.rs  payments.rs  reader.rs  remapping.rs  taxes.rs  trades.rs  validators.rs
src/broker_statement/bcs/: assets.rs  cash_flow.rs  common.rs  mod.rs  parser.rs  parsers.rs  period.rs  securities.rs  trades.rs
src/broker_statement/firstrade/: balance.rs  common.rs  dividends.rs  mod.rs  open_positions.rs  parser.rs  security_info.rs  transactions.rs
src/broker_statement/ib/: cash.rs  cash_flows.rs  common.rs  confirmation.rs  corporate_actions.rs  dividends.rs  fees.rs  grants.rs  instruments.rs  interest.rs  mod.rs  parsers.rs  sections.rs  summary.rs  taxes.rs  trades.rs
src/broker_statement/open/: assets.rs  cash_flows.rs  common.rs  forex.rs  mod.rs  model.rs  parsers.rs  report.rs  trades.rs
src/broker_statement/open_broker/: common.rs  mod.rs  model.rs  parsers.rs
src/broker_statement/sber/: assets.rs  cash_assets.rs  cash_flow.rs  common.rs  mod.rs  period.rs  securities.rs  trades.rs
src/broker_statement/tbank/: assets.rs  cash_assets.rs  common.rs  foreign_income.rs  mod.rs  period.rs  securities.rs  trades.rs
src/broker_statement/tinkoff/: assets.rs  cash_assets.rs  common.rs  foreign_income.rs  mod.rs  period.rs  securities.rs  trades.rs
src/broker_statement/xls/: mod.rs  sections.rs
src/brokers/: commissions.rs  config.rs  mod.rs
src/brokers/plans/: bcs.rs  firstrade.rs  ib.rs  mod.rs  open.rs  sber.rs  tbank.rs  tinkoff.rs
src/cash_flow/: calculation.rs  calculator.rs  cash_flow.rs  comparator.rs  config.rs  mapper.rs  mod.rs  types.rs
src/commissions/: builders.rs  fixed.rs  mod.rs  tiered.rs
src/currency/: cash.rs  cbr.rs  converter.rs  mod.rs  multi.rs  name_cache.rs  rate_cache.rs  rates_cache.rs
src/db/: mod.rs  models.rs  schema.rs
src/deposits/: config.rs  mod.rs
src/formats/: mod.rs  xml.rs
src/formats/html/: mod.rs  parser.rs  sheet.rs  table.rs  util.rs
src/formats/xls/: cell.rs  mod.rs  parser.rs  sheet.rs  table.rs  util.rs
src/formats/xls/xls_table_derive/: Cargo.toml
src/formats/xls/xls_table_derive/src/: lib.rs
src/formatting/: mod.rs  old_table.rs  static_table.rs  table.rs
src/formatting/static_table_derive/: Cargo.toml
src/formatting/static_table_derive/src/: lib.rs
src/metrics/: backfilling.rs  config.rs  mod.rs
src/portfolio/: asset_allocation.rs  assets.rs  config.rs  formatting.rs  mod.rs  rebalancing.rs
src/quotes/: adapter.rs  alphavantage.rs  cache.rs  cbr.rs  common.rs  custom_provider.rs  fcsapi.rs  finex.rs  finnhub.rs  mod.rs  moex.rs  static_provider.rs  stooq.rs  tinkoff.rs  twelvedata.rs
src/quotes/cbr/: deposits.rs  mod.rs
src/quotes/tbank/: api.rs  auth.rs  google.api.rs  mod.rs  tinkoff.public.invest.api.contract.v1.rs  trace.rs
src/quotes/testdata/: finex.xlsx  moex-closed.xml  moex-empty.xml  moex-historical-end.json  moex-historical-start.json  moex-instrument-fxrb.json  moex-instrument-fxus.json  moex-instrument-info.json  moex-instrument-missing.json  moex-open.xml  moex-opening.xml  moex.xml
src/quotes/tinkoff/: client.rs  mod.rs  tinkoff.public.invest.api.contract.v1.rs
src/statement/: ib.rs  mod.rs
src/static_table/: mod.rs
src/static_table/static_table_derive/: Cargo.toml
src/tax_statement/: dividends.rs  interest.rs  mod.rs  tax_agent.rs  trades.rs
src/tax_statement/parser/: encoding.rs  mod.rs  (+2 more)
src/taxes/: calculator.rs  long_term_ownership.rs  mod.rs  net_calculator.rs  payment_day.rs  rates.rs  remapping.rs
src/time/: date.rs  mod.rs  month.rs  parsing.rs  period.rs
src/xls/: cell.rs  mod.rs  parser.rs  reader.rs  sheet.rs  table.rs  util.rs
src/xls/xls_table_derive/: Cargo.toml
src/xls/xls_table_derive/src/: lib.rs
tests/: generate  generate.rs  investments  rt.rt  run  test-tax-statement  update
tests/retest/: Cargo.toml  README.md
tests/retest/src/: lib.rs  util.rs  xerror.rs
tests/retest/src/plan/: builder.rs  builder_tests.rs  counts.rs  diff.rs  mod.rs  parse.rs  process.rs  test.rs  test_builder.rs
(+44 files in other folders)
