[package]
name = "investments"
version = "7.3.0"
description = "Helps you with managing your investments"
keywords = ["finance", "investment", "stocks", "trading", "taxes"]
categories = ["command-line-utilities"]

authors = ["Dmitry Konishchev <konishchev@gmail.com>"]
homepage = "https://github.com/KonishchevDmitry/investments"
repository = "https://github.com/KonishchevDmitry/investments"
documentation = "https://github.com/KonishchevDmitry/investments"
license = "GPL-3.0+"
readme = "README.md"

edition = "2024"
exclude = ["/src/quotes/tbank/specs", "/testdata"]

[[bin]]
name = "investments"
path = "src/bin/investments/mod.rs"

[[example]]
name = "backtest"
path = "examples/backtest.rs"

# Used by regression tests
[[example]]
name = "tax-statement-parser"
path = "examples/tax_statement_parser.rs"

[lints.clippy]
collapsible-if = "allow"
comparison-chain = "allow"
derive-partial-eq-without-eq = "allow"
new-ret-no-self = "allow"
new-without-default = "allow"
redundant-field-names = "allow"
too-many-arguments = "allow"
type-complexity = "allow"
unit-arg = "allow"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
ansi_term = "0.12.1"
bitflags = "2.9.0"
calamine = "0.26.1"
chrono = "0.4.40"
chrono-tz = "0.10.3"
cast = "0.3.0"
clap = "4.5.35"
clap_complete = "4.5.47"
csv = "1.3.1"
cusip = "0.3.0"
dyn-clone = "1.0.19"
easy-logging = "1.1.0"
encoding_rs = "0.8.35"
governor = "0.10.0"
indoc = "2.0.6"
isin = "0.1.18"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.27"
maplit = "1.0.2"
matches = "0.1.10"
maybe-owned = "0.3.4"
num-integer = "0.1.46"
num-traits = "0.2.19"
platforms = "3.5.0"
prettytable-rs = "0.10.0"
prometheus = "0.14.0"
prost = "0.13"
prost-types = "0.13"
quick-xml = { version = "0.37.4", features = [ "serialize" ] }
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
scraper = "0.23.1"
separator = "0.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
serde-xml-rs = "0.6.0"
shellexpand = "3.1.0"
strum = { version = "0.27", features = ["derive"] }
textwrap = "0.16.2"
tokio = "1.44.2"
tonic = { version = "0.13", features = ["tls-ring", "tls-native-roots"] }
url = "2.5.4"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
xml-rs = "0.8.25"
yaml-merge-keys = { version = "0.8.1", features = ["serde_yaml"] }

diesel = { version = "2.2.9", features = ["sqlite", "chrono"] }
diesel_migrations = "2.2.0"
diesel-derive-enum = { version = "2.1.0", features = ["sqlite"] }

# Pin rust_decimal version since it's not stable enough yet
rust_decimal = "~1.37.1"
rust_decimal_macros = "~1.37.1"

# FIXME(konishchev): A workaround for broken colored table rendering (https://github.com/phsym/prettytable-rs/issues/165)
unicode-width = "=0.1.12"

# FIXME(konishchev): A workaround for https://github.com/tafia/calamine/issues/492
zip = "=2.5.0"

# Force static linking
libsqlite3-sys = { version = ">=0.17.2, <0.28.0", features = ["bundled"] }
openssl = { version = "0.10", features = ["vendored"] }

static_table_derive = "0.1.76"
xls_table_derive = "0.8.6"

[patch.crates-io]
static_table_derive = { path = "src/formatting/static_table_derive" }
xls_table_derive = { path = "src/formats/xls/xls_table_derive" }

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
mockito = "1.7.0"
qtrac-retest = { path = "tests/retest" } # The original crate has been removed from crates.io (https://github.com/KonishchevDmitry/investments/issues/84)
rstest = "0.25.0"
tempfile = "3.19.1"
url = "2.5.4"
