[package]
name = "investments"
version = "7.11.2"
description = "Helps you with managing your investments"
keywords = ["finance", "investment", "stocks", "trading", "taxes"]
categories = ["command-line-utilities"]

authors = ["Dmitry Konishchev <konishchev@gmail.com>"]
homepage = "https://github.com/KonishchevDmitry/investments"
repository = "https://github.com/KonishchevDmitry/investments"
documentation = "https://github.com/KonishchevDmitry/investments"
license = "GPL-3.0+"
readme = "README.md"

edition = "2024"
exclude = ["/src/quotes/tbank/specs", "/testdata"]

[[bin]]
name = "investments"
path = "src/bin/investments/mod.rs"

# Used by regression tests
[[example]]
name = "tax-statement-parser"
path = "examples/tax_statement_parser.rs"

[lints.clippy]
collapsible-if = "allow"
comparison-chain = "allow"
derive-partial-eq-without-eq = "allow"
new-ret-no-self = "allow"
new-without-default = "allow"
obfuscated-if-else = "allow"
redundant-field-names = "allow"
too-many-arguments = "allow"
type-complexity = "allow"
unit-arg = "allow"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
ansi_term = "0.12.1"
async-stream = "0.3.6"
backoff = "0.4.0"
bitflags = "2.10.0"
calamine = "0.32.0"
chrono = "0.4.42"
chrono-tz = "0.10.4"
cast = "0.3.0"
clap = "4.5.53"
clap_complete = "4.5.62"
csv = "1.4.0"
cusip = "0.3.3"
dyn-clone = "1.0.20"
easy-logging = "1.1.0"
encoding_rs = "0.8.35"
futures-core = "0.3.31"
governor = "0.10.4"
indoc = "2.0.7"
isin = "0.1.19"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.29"
maplit = "1.0.2"
matches = "0.1.10"
maybe-owned = "0.3.4"
num-integer = "0.1.46"
num-traits = "0.2.19"
platforms = "3.7.0"
prettytable-rs = "0.10.0"
prometheus = "0.14.0"
quick-xml = { version = "0.38.4", features = ["serialize"] }
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.12.26", features = ["blocking", "json", "stream"] }
scraper = "0.25.0"
separator = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-xml-rs = "0.8.2"
serde_yaml = "0.9.34"
shellexpand = "3.1.1"
strum = { version = "0.27", features = ["derive"] }
textwrap = "0.16.2"
tokio = "1.48.0"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
xml-rs = "1.0.0"
yaml-merge-keys = { version = "0.8.2", features = ["serde_yaml"] }

diesel = { version = "2.3.5", features = ["sqlite", "chrono"] }
diesel_migrations = "2.3.1"
diesel-derive-enum = { version = "2.1.0", features = ["sqlite"] }

# Pin rust_decimal version since it's not stable enough yet
rust_decimal = "~1.39.0"
rust_decimal_macros = "~1.39.0"

prost = "0.14"
prost-types = "0.14"
tonic = { version = "0.14", features = ["tls-ring", "tls-native-roots"] }
tonic-prost = "0.14"

# FIXME(konishchev): A workaround for broken colored table rendering (https://github.com/phsym/prettytable-rs/issues/165)
unicode-width = "=0.1.12"

# Force static linking
libsqlite3-sys = { version = ">=0.17.2, <0.28.0", features = ["bundled"] }
openssl = { version = "0.10", features = ["vendored"] }

static_table_derive = "0.1.83"
xls_table_derive = "0.8.13"

[patch.crates-io]
static_table_derive = { path = "src/formatting/static_table_derive" }
xls_table_derive = { path = "src/formats/xls/xls_table_derive" }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
mockito = "1.7.1"
qtrac-retest = { path = "tests/retest" } # The original crate has been removed from crates.io (https://github.com/KonishchevDmitry/investments/issues/84)
rstest = "0.26.1"
tempfile = "3.23.0"
url = "2.5.7"
