[package]
name = "static_table_derive"
version = "0.1.85"
description = "Procedural macros for investments crate"

authors = ["Dmitry Konishchev <konishchev@gmail.com>"]
repository = "https://github.com/KonishchevDmitry/investments"
license = "GPL-3.0+"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
darling = "0.23.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"
