[package]
name = "xls_table_derive"
version = "0.5.8"
description = "Procedural macros for investments crate"

authors = ["Dmitry Konishchev <konishchev@gmail.com>"]
homepage = "https://github.com/KonishchevDmitry/investments"
license = "GPL-3.0+"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.13.4"
proc-macro2 = "1.0.37"
quote = "1.0.17"
syn = "1.0.91"
