[package]
name = "xls_table_derive"
version = "0.5.14"
description = "Procedural macros for investments crate"

authors = ["Dmitry Konishchev <konishchev@gmail.com>"]
homepage = "https://github.com/KonishchevDmitry/investments"
license = "GPL-3.0+"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.14.1"
proc-macro2 = "1.0.41"
quote = "1.0.20"
syn = "1.0.98"
