[package]
name = "xls_table_derive"
version = "0.5.17"
description = "Procedural macros for investments crate"

authors = ["Dmitry Konishchev <konishchev@gmail.com>"]
homepage = "https://github.com/KonishchevDmitry/investments"
license = "GPL-3.0+"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.14.2"
proc-macro2 = "1.0.48"
quote = "1.0.22"
syn = "1.0.106"
