[package]
name = "xls_table_derive"
version = "0.8.1"
description = "Procedural macros for investments crate"

authors = ["Dmitry Konishchev <konishchev@gmail.com>"]
homepage = "https://github.com/KonishchevDmitry/investments"
license = "GPL-3.0+"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "2.0.77"
