[package]
name = "xls_table_derive"
version = "0.8.12"
description = "Procedural macros for investments crate"

authors = ["Dmitry Konishchev <konishchev@gmail.com>"]
repository = "https://github.com/KonishchevDmitry/investments"
license = "GPL-3.0+"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = "2.0.106"
